# graphedexcel

./: .gitignore  Book1.xlsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Packaging_notes.md  README.md  SECURITY.md  bandit_security_baseline.json  excel_parser.py  graph_visualizer.py  graphbuilder.py  main.py  pyproject.toml  requirements.txt  test_cell_reference_extraction.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  docker-build-push.yml  docker-build.yml  pypi-publish.yml  python-app.yml  scorecard.yml
docs/: Book1.xlsx  Packaging_notes.md  ai_chat_context_creator.py  sample_settingsfile.json
docs/helperscripts/: dockerbuild.ps1  dockerrun.ps1  dockertag.ps1
src/: excel_parser.py  graph_visualizer.py  graphbuilder.py
src/graphedexcel/: __init__.py  __main__.py  cli.py  excel_parser.py  graph_summarizer.py  graph_visualizer.py  graphbuilder.py  logger_config.py
tests/: conftest.py  test_cell_reference_extraction.py  test_cli.py  test_graph_visualizer.py  test_graphbuilder.py
