[project]
name = "graphedexcel"
version = "0.0.2"
authors = [
  { name="Christian Dalager", email="christian@dalager.com" },
]
description = "Tool to analyze and visualize dependencies between cells in Excel spreadsheets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
    "astroid==3.2.4",
    "colorama==0.4.6",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "dill==0.3.8",
    "et-xmlfile==1.1.0",
    "flake8==7.1.1",
    "fonttools==4.53.1",
    "iniconfig==2.0.0",
    "isort==5.13.2",
    "kiwisolver==1.4.7",
    "matplotlib==3.9.2",
    "mccabe==0.7.0",
    "networkx==3.3",
    "numpy==2.1.1",
    "openpyxl==3.1.5",
    "packaging==24.1",
    "pillow==10.4.0",
    "platformdirs==4.3.3",
    "pluggy==1.5.0",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "pyparsing==3.1.4",
    "pytest==8.3.3",
    "python-dateutil==2.9.0.post0",
    "scipy==1.14.1",
    "six==1.16.0",
    "tomlkit==0.13.2",
]



[project.urls]
Homepage = "https://github.com/dalager/graphedexcel"
Issues = "https://github.com/dalager/graphedexcel/issues"

